--- a/resources/assets/sass/general.scss
+++ b/resources/assets/sass/general.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Bibliotheque;
+  src: url(/fonts/biblio.ttf);
+}
+
 body {
   background: #000000 url("/img/home-background.jpg") no-repeat fixed center;
 }
