--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: Bibliotheque;
+  src: url(/fonts/biblio.ttf); }
+
 body {
   background: #000000 url("/img/home-background.jpg") no-repeat fixed center; }
 
@@ -13,7 +17,34 @@ body {
 .navbar-header {
   float: none !important; }
 
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+.caret-up {
+  width: 0;
+  height: 0;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 4px solid;
+  display: inline-block;
+  margin-left: 2px;
+  vertical-align: middle; }
+
+.font-biblio {
+  font-family: Bibliotheque;
+  font-size: 38px;
+  color: #888272 !important; }
+
+.font-biblio:hover {
+  color: #B8B5A8 !important; }
+
+.index-container {
+  padding: 30px;
+  width: 100% !important;
+  background-color: #F7F7F7;
+  margin: 30px auto;
+  border-radius: 2px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  opacity: 0.95; }
+
 /****** LOGIN MODAL ******/
 .loginmodal-container {
   padding: 30px;
@@ -21,14 +52,14 @@ body {
   width: 100% !important;
   background-color: #F7F7F7;
   margin: 0 auto;
+  margin-top: 150px;
   border-radius: 2px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   overflow: hidden;
-  font-family: roboto; }
+  opacity: 0.95; }
   .loginmodal-container h1 {
     text-align: center;
-    font-size: 1.8em;
-    font-family: roboto; }
+    font-size: 1.8em; }
   .loginmodal-container input[type=submit] {
     width: 100%;
     display: block;
@@ -62,7 +93,6 @@ body {
     text-shadow: 0 1px rgba(0, 0, 0, 0.1);
     background-color: #4d90fe;
     padding: 17px 0px;
-    font-family: roboto;
     font-size: 14px; }
   .loginmodal-container .loginmodal-submit:hover {
     border: 0px;
@@ -78,3 +108,67 @@ body {
     transition: opacity ease 0.5s; }
   .loginmodal-container .login-help {
     font-size: 12px; }
+
+.bg-danger {
+  background-color: #f2dede !important; }
+
+/****** LOGIN MODAL ******/
+.registermodal-container {
+  padding: 30px;
+  max-width: 350px;
+  width: 100% !important;
+  background-color: #F7F7F7;
+  margin: 0 auto;
+  margin-top: 150px;
+  border-radius: 2px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  opacity: 0.95; }
+  .registermodal-container h1 {
+    text-align: center;
+    font-size: 1.8em; }
+  .registermodal-container input[type=submit] {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+    position: relative; }
+  .registermodal-container input[type=text], .registermodal-container input[type=password] {
+    height: 44px;
+    font-size: 16px;
+    width: 100%;
+    margin-bottom: 10px;
+    -webkit-appearance: none;
+    background: #fff;
+    border: 1px solid #d9d9d9;
+    border-top: 1px solid #c0c0c0;
+    padding: 0 8px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box; }
+  .registermodal-container input[type=text]:hover, .registermodal-container input[type=password]:hover {
+    border: 1px solid #b9b9b9;
+    border-top: 1px solid #a0a0a0;
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1); }
+  .registermodal-container .registermodal-submit {
+    border: 0px;
+    color: #fff;
+    text-shadow: 0 1px rgba(0, 0, 0, 0.1);
+    background-color: #4d90fe;
+    padding: 17px 0px;
+    font-size: 14px; }
+    .registermodal-container .registermodal-submit:hover {
+      border: 0px;
+      text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+      background-color: #357ae8; }
+  .registermodal-container a {
+    text-decoration: none;
+    color: #666;
+    font-weight: 400;
+    text-align: center;
+    display: inline-block;
+    opacity: 0.6;
+    transition: opacity ease 0.5s; }
+  .registermodal-container .register-help {
+    font-size: 12px; }
+
+.bg-danger {
+  background-color: #f2dede !important; }
